--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,12 @@
       "es2020",
       "dom"
     ],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "paths": {
+			"@app/*": [
+				"src/app/*"
+			],
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
